After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737027 - gtkinspector doesn't run if custom GSETTINGS_SCHEMA_DIR specified
gtkinspector doesn't run if custom GSETTINGS_SCHEMA_DIR specified
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Debugging
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-09-20 14:45 UTC by Cole Robinson
Modified: 2014-09-20 23:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Cole Robinson 2014-09-20 14:45:03 UTC
$ rpm -q gtk3
gtk3-3.13.9-1.fc21.x86_64

If running virt-manager from a git checkout, we set GSETTINGS_SCHEMA_DIR to point at a local compiled copy of our gsettings schema, so the app runs with the latest schema and doesn't crash trying to read unknown settings.

However setting GSETTINGS_SCHEMA_DIR like this prevents the inspector from running, the key combos don't generate any result. I've verified that dropping the environment over-ride makes it work correctly.

Maybe this is NOTABUG, or we should be doing something differently in virt-manager. Tips appreciated
Comment 1 Matthias Clasen 2014-09-20 15:40:32 UTC
Gtk is using gsettings too. Setting the schema dir like that prevents gtk from finding its own schemas. In particular the ones related to the inspector. We have a setting to enable/disable the keyboard shortcut. Seems that we default to 'off' for that...
Comment 2 Cole Robinson 2014-09-20 16:15:51 UTC
oh, I assumed it worked like LD_LIBRARY_PATH or PYTHONPATH, where a custom path just takes precedence but doesn't remove the system path from the search list.